--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
  
     <nav id="navbar">
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#welcome-section">About</a></li>
+        <li><a href="#projects">Work</a></li>
+        <li><a href="#contacte">Contact</a></li>
       </ul>
     </nav>
      <section id=welcome-section>
@@ -32,7 +32,7 @@
         <a class="cab" href="#">
         <img src="images/tribute.jpg" alt="">
       <p><span>
-          <</span>Tribute Page<span>/>
+          &lt</span>Tribute Page<span>/>
         </span></p>
         </a>
 
@@ -41,7 +41,7 @@
         <a class="cab" href="#">
         <img src="images/random-quote-machine.png" alt="">
         <p><span>
-            <</span>Random Quote Machine <span>/>
+            &lt</span>Random Quote Machine <span>/>
           </span></p>
         </a>
 
@@ -50,17 +50,17 @@
   <a class="cab" href="#">
   <img src="images/calc.png" alt="">
   <p><span>
-      <</span>JavaScript Calculator<span>/>
+      &lt</span>JavaScript Calculator<span>/>
     </span></p>
   </a>
 
 </div>
 <div class="images-box">
 <a class="cab" href="#">
-  <img src="images/map.jpg" alt="">
-  <p><span>
-      <</span>Map Aata Across Globe</p> <span>/>
-    </span>
+  <img src="images/map.jpg" alt=""><p>
+  <span>&lt
+      </span>Map Across Globe<span>/>
+    </span></p>
     </a>
 
 </div>
@@ -68,7 +68,7 @@
   <a class="cab" href="#">
   <img src="images/wiki.png" alt="">
   <p><span>
-      <</span>Wikipedia Viewer<span>/>
+      &lt</span>Wikipedia Viewer<span>/>
     </span></p>
     </a>
 
@@ -77,7 +77,7 @@
   <a class="cab" href="#">
   <img src="images/tic-tac-toe.png" alt="">
   <p><span>
-      <</span>Tic Tac Toe Game<span>/>
+      &lt</span>Tic Tac Toe Game<span>/>
     </span></p>
   </a>
 
@@ -87,20 +87,22 @@
 <a class ="btn" href="#">Show all ></a>
 </div>
   </section>
-  <div class="contact">
+  <div class="contact" id="contacte">
     <h2>Let's work together ...</h2>
     <p>How do you take your coffe?</p>
   
 
   <div class="contact-links">
-    <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
-        class="fab fa-facebook-square"></i> Facebook</a>
-    <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i
-        class="fab fa-github"></i> GitHub</a>
-    <a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
-        class="fab fa-twitter"></i> Twitter</a>
-    <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-    <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+    <ul>
+   <li> <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
+        class="fab fa-facebook-square"></i> Facebook</a></li>
+   <li> <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i
+        class="fab fa-github"></i> GitHub</a></li>
+   <li><a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
+        class="fab fa-twitter"></i> Twitter</a></li>
+    <li><a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a></li>
+    <li><a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a></li>
+    </ul>
   </div>
   </div>
 
@@ -108,7 +110,8 @@
     <p>**This is just a fake portfolio. All the projects and contact details given are not real.
 </p>
 
-    <i>© Created for freeCodeCamp <span><i class="fab fa-free-code-camp"></i></span></p>
+    <p>© Created for freeCodeCamp <span class="free">
+      <i class="fab fa-free-code-camp"></span></i></p>
   </footer>
 
 
