html was improved using css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://g1.nyt.com/fonts/css/web-fonts.5810def60210a2fa7d0848f37e3fa048bb6147b1.css" rel="stylesheet"
-    type="text/css">
-  <script src="https://kit.fontawesome.com/d4de0f4540.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>portfolio-clone</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://g1.nyt.com/fonts/css/web-fonts.5810def60210a2fa7d0848f37e3fa048bb6147b1.css" rel="stylesheet"
+         type="text/css">
+      <script src="https://kit.fontawesome.com/d4de0f4540.js" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="style.css">
+      <title>portfolio-clone</title>
+   </head>
 
 <body>
- 
     <nav id="navbar">
       <ul>
         <li><a href="#welcome-section">About</a></li>
@@ -20,115 +19,66 @@
         <li><a href="#contacte">Contact</a></li>
       </ul>
     </nav>
-     <section id=welcome-section>
-    <h1>Hey i am Nellah</h1>
-    <p>a web developer</p>
-  </section>
-  <section id="projects">
-    <h2>These are some of my projects</h2>
-    <div class="project-tile">
-      
+    <section id=welcome-section>
+       <h1>Hey i am Nellah</h1>
+      <p>a web developer</p>
+    </section>
+    <section id="projects">
+      <h2>These are some of my projects</h2>
+      <div class="project-tile">
       <div class="images-box">
         <a class="cab" href="#">
         <img src="images/tribute.jpg" alt="">
-      <p><span>
-          &lt</span>Tribute Page<span>/>
-        </span></p>
-        </a>
-
+        <p><span>&lt</span>Tribute Page<span>/></span></p></a>
       </div>
       <div class="images-box">
-        <a class="cab" href="#">
-        <img src="images/random-quote-machine.png" alt="">
-        <p><span>
-            &lt</span>Random Quote Machine <span>/>
-          </span></p>
-        </a>
-
+          <a class="cab" href="#">
+         <img src="images/random-quote-machine.png" alt="">
+         <p><span>&lt</span>Random Machine <span>/></span></p> </a>
       </div>
-<div class="images-box">
-  <a class="cab" href="#">
-  <img src="images/calc.png" alt="">
-  <p><span>
-      &lt</span>JavaScript Calculator<span>/>
-    </span></p>
-  </a>
-
-</div>
-<div class="images-box">
-<a class="cab" href="#">
-  <img src="images/map.jpg" alt=""><p>
-  <span>&lt
-      </span>Map Across Globe<span>/>
-    </span></p>
-    </a>
-
-</div>
-<div class="images-box">
-  <a class="cab" href="#">
-  <img src="images/wiki.png" alt="">
-  <p><span>
-      &lt</span>Wikipedia Viewer<span>/>
-    </span></p>
-    </a>
-
-</div>
-<div class="images-box">
-  <a class="cab" href="#">
-  <img src="images/tic-tac-toe.png" alt="">
-  <p><span>
-      &lt</span>Tic Tac Toe Game<span>/>
-    </span></p>
-  </a>
-
-</div>
-</div>
-<div class="show">
-<a class ="btn" href="#">Show all ></a>
-</div>
-  </section>
-  <div class="contact" id="contacte">
-    <h2>Let's work together ...</h2>
-    <p>How do you take your coffe?</p>
-  
-
-  <div class="contact-links">
-    <ul>
-   <li> <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
-        class="fab fa-facebook-square"></i> Facebook</a></li>
-   <li> <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i
-        class="fab fa-github"></i> GitHub</a></li>
-   <li><a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
-        class="fab fa-twitter"></i> Twitter</a></li>
-    <li><a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a></li>
-    <li><a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a></li>
-    </ul>
-  </div>
-  </div>
-
-  <footer>
-    <p>**This is just a fake portfolio. All the projects and contact details given are not real.
-</p>
-
-    <p>© Created for freeCodeCamp <span class="free">
-      <i class="fab fa-free-code-camp"></span></i></p>
-  </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+      <div class="images-box">
+          <a class="cab" href="#">
+          <img src="images/calc.png" alt="">
+          <p><span> &lt</span>JavaScript Calculator<span>/></span></p> </a>
+      </div>
+       <div class="images-box">
+         <a class="cab" href="#">
+         <img src="images/map.jpg" alt=""><p><span>&lt</span>Map Across Globe<span>/></span></p></a>
+       </div>
+       <div class="images-box">
+          <a class="cab" href="#">
+          <img src="images/wiki.png" alt="">
+          <p><span>&lt</span>Wikipedia Viewer<span>/></span></p></a>
+       </div>
+      <div class="images-box">
+         <a class="cab" href="#">
+         <img src="images/tic-tac-toe.png" alt=""><p><span>&lt</span>Tic Tac Toe Game<span>/></span></p></a>
+         </div>
+      </div>
+      <div class="show"><a class ="btn" href="#">Show all ></a>
+      </div>
+    </section>
+      <div class="contact" id="contacte">
+          <h2>Let's work together ...</h2>
+          <p>How do you take your coffe?</p>
+       <div class="contact-links">
+         <ul>
+           <li> <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
+               class="fab fa-facebook-square"></i> Facebook</a></li>
+           <li> <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i
+               class="fab fa-github"></i> GitHub</a></li>
+           <li><a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
+                 class="fab fa-twitter"></i> Twitter</a></li>
+           <li><a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a></li>
+           <li><a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a></li>
+         </ul>
+        </div>
+      </div>
+      <footer>
+        <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+        <p>© Created for freeCodeCamp <span class="free">
+        <i class="fab fa-free-code-camp"></i></span></p>
+      </footer>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
-
-  </html>
+</html>
